--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,13 @@ dependencies:
 
   english_words: ^3.1.3
 
+  json_model: 0.0.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
