--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,19 +23,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   english_words: ^3.1.3
 
   json_model: 0.0.2
-
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
+  fluttertoast: ^3.0.3
+  cached_network_image: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-
+  intl: ^0.16.0
+  dio: 3.0.10
+  provider: ^3.0.0+1
+  shared_preferences: ^0.5.1+1
+  flukit: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_translation: ^0.17.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -51,6 +60,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - imgs/dog.jpg
+    - imgs/avatar-default.png
+    - imgs/logo_dark.png
+    - imgs/logo_light.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
